fixed requests, modified annotation and openAPI doc and fixed check on not completed subtasks for update and change status methods
